# GeminiMCPa

./: .gitignore  ADD_TO_CURSOR.md  ADD_TO_CURSOR_MCP.bat  CURSOR_MCP_SETUP.md  Dockerfile  GeminiMCP.bat  PUPPETEER-USAGE.md  README.md  SMITHERY_DEPLOYMENT.md  USAGE.md  fix-mcp-server.js  gemini-mcp-server.js  gemini-mcp-wrapper.bat  gemini_mcp_server.py  gemini_runner.py  install_and_setup.bat  install_with_uv.bat  integration-cursor.bat  package-lock.json  package.json  pyproject.toml  requirements.txt  run-direct.bat  run-gemini-mcp.bat  run-mcp-server.bat  run-mcp.js  run-with-puppeteer.bat  run-with-uv.bat  run_client.bat  run_gemini_mcp_server.bat  server.js  set_gemini_api_key.bat  setup.js  setup.py  smithery.yaml  start-gemini-mcp.bat  start-mcp-server.bat
client/: mcp_client.js
config/: cursor-mcp-config.json
mcp-made-simple-main/lesson1/server/src/: index.ts
server/: dotenv-config.js  gemini-api.js  gemini_mcp_server.js  robust-mcp-server.js  sequentialthinking-tools.js  server-direct.js  simple_mcp_server.js
