[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-mcp-server"
version = "1.0.0"
description = "Gemini Sequential Thinking MCP Server"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Gemini MCP Server", email = "example@example.com"}
]

[project.scripts]
gemini-mcp-server = "gemini_mcp_server:main"

[tool.setuptools]
packages = []
py-modules = ["gemini_mcp_server"] 